tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBindingDts.errors.txt
tests/cases/compiler/client.ts(1,8): error TS1192: Module '"tests/cases/compiler/server"' has no default export.


==== tests/cases/compiler/server.ts (0 errors) ====
    export class a { }
    
==== tests/cases/compiler/client.ts (1 errors) ====
    import defaultBinding, * as nameSpaceBinding  from "./server";
           ~~~~~~~~~~~~~~
!!! error TS1192: Module '"tests/cases/compiler/server"' has no default export.
    export var x = new nameSpaceBinding.a();